# SSPUnity

./: .gitignore  README.org
.github/workflows/: main.yml
NativePlugin/: CMakeLists.txt
NativePlugin/extra/: default_server_config.yaml
NativePlugin/include/: k4a_reader.h  kinect2_reader.h  libav_raw_decoder.h  network_subscriber.h  zdepth_raw_decoder.h
NativePlugin/src/: k4a_reader.cc  kinect2_reader.cc  libav_raw_decoder.cc  network_subscriber.cc  ssp_client_plugin.cc  ssp_client_plugin_tester.cc  ssp_client_subscriber.cc  ssp_server_publish.cc  zdepth_raw_decoder.cc
UnityPackage/: SSPClient.cs  package.json
UnityPackage/Runtime/: SSPClient.cs  com.eidetic.sensorstreampipe.Runtime.asmdef
UnityPackage/Runtime/Resources/: DepthTransfer.compute  KINECT2.txt  SSPClient.prefab  SSPPointCloud.compute
